# ChangeLog for media-plugins/gmpc-lyrics
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/gmpc-lyrics/ChangeLog,v 1.42 2012/08/21 10:06:49 xmw Exp $

  21 Aug 2012; Michael Weber <xmw@gentoo.org> gmpc-lyrics-11.8.16.ebuild:
  ppc stable (381219)

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> gmpc-lyrics-0.20.0.ebuild,
  gmpc-lyrics-11.8.16.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  09 Oct 2011; Markus Meier <maekke@gentoo.org> gmpc-lyrics-11.8.16.ebuild:
  x86 stable, bug #381219

  25 Sep 2011; Tony Vroon <chainsaw@gentoo.org> gmpc-lyrics-11.8.16.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo &
  Elijah "Armageddon" El Lazkani in bug #381219.

*gmpc-lyrics-11.8.16 (20 Aug 2011)

  20 Aug 2011; Christoph Mende <angelos@gentoo.org>
  +gmpc-lyrics-11.8.16.ebuild:
  Version bump

  19 Mar 2011; Christoph Mende <angelos@gentoo.org> gmpc-lyrics-0.20.0.ebuild:
  Remove .la file

  13 Mar 2011; <angelos@gentoo.org> -gmpc-lyrics-0.18.0.ebuild,
  -gmpc-lyrics-0.19.0.ebuild:
  Removed old

  26 Feb 2011; Michael Weber <xmw@gentoo.org> gmpc-lyrics-0.20.0.ebuild:
  sparc dropping keywords (bug 325621)

  25 Feb 2011; Michael Weber <xmw@gentoo.org> gmpc-lyrics-0.20.0.ebuild:
  Added ~sparc (bug 325621)

  20 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  gmpc-lyrics-0.20.0.ebuild:
  x86 stable wrt bug #325621

  20 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
  gmpc-lyrics-0.20.0.ebuild:
  ppc stable wrt #325621

  17 Feb 2011; Markos Chandras <hwoarang@gentoo.org> gmpc-lyrics-0.20.0.ebuild:
  Stable on amd64 wrt bug #325621

  13 Feb 2011; Raúl Porcel <armin76@gentoo.org> gmpc-lyrics-0.18.0.ebuild,
  gmpc-lyrics-0.19.0.ebuild, gmpc-lyrics-0.20.0.ebuild:
  Drop sparc keywords

*gmpc-lyrics-0.20.0 (25 May 2010)

  25 May 2010; Christoph Mende <angelos@gentoo.org>
  +gmpc-lyrics-0.20.0.ebuild:
  Version bump

*gmpc-lyrics-0.19.0 (27 Sep 2009)
