@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/gmpc-lyrics
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gmpc-lyrics/ChangeLog,v 1.42 2012/08/21 10:06:49 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gmpc-lyrics/ChangeLog,v 1.43 2012/08/21 16:41:39 angelos Exp $
+
+  21 Aug 2012; Christoph Mende <angelos@gentoo.org> -gmpc-lyrics-0.20.0.ebuild:
+  Remove old
 
   21 Aug 2012; Michael Weber <xmw@gentoo.org> gmpc-lyrics-11.8.16.ebuild:
   ppc stable (381219)
